--- a/agree/res/layout/preview_item.xml
+++ b/agree/res/layout/preview_item.xml
@@ -8,8 +8,8 @@
         <RelativeLayout
             android:id="@+id/relativeLayout1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp" >
+            android:layout_height="52.0dp"
+             >
 
             <TextView
                 android:id="@+id/tv_partyname"
@@ -17,8 +17,13 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginLeft="5dp"
-                android:text="TextView" />
+                android:layout_marginLeft="10.0dp"
+                android:text="TextView"
+                android:textSize="14.0sp"
+                android:textColor="#535353"
+                android:layout_marginTop="10.0dp"
+                android:gravity="left|center"
+                 />
 
             <TextView
                 android:id="@+id/tv_partytime"
@@ -26,9 +31,11 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_below="@+id/tv_partyname"
-                android:layout_marginLeft="5dp"
+                android:layout_marginLeft="10.0dp"
                 android:text="Small Text"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                android:textSize="12.0sp"
+                android:textColor="#959595"
+                android:gravity="left|center" />
 
             <TextView
                 android:id="@+id/tv_partyphotonum"
@@ -36,8 +43,11 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="18dp"
-                android:text="50" />
+                android:layout_marginRight="25.0dp"
+                android:text="8"
+                android:textSize="13.0sp"
+                android:textColor="#959595"
+                 />
         </RelativeLayout>
 
         <com.BJ.utils.MyGridView
@@ -53,9 +63,10 @@
         <RelativeLayout
             android:id="@+id/onclick_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="52.0dp"
             android:layout_alignTop="@+id/relativeLayout1" 
-            android:layout_alignBottom="@+id/gv_partypreview">
+            android:layout_alignBottom="@+id/gv_partypreview"
+            >
 
         </RelativeLayout>
 
