--- a/agree/res/layout/activity_graphic_details.xml
+++ b/agree/res/layout/activity_graphic_details.xml
@@ -82,10 +82,12 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/GraphicDetailsListLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/GraphicDetailsTitleLayout"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="50.0dp"
         >
 
         <ListView
@@ -101,6 +103,14 @@
 
         </ListView>
 <!-- android:transcriptMode="normal"  -->
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="5.0dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        >
     </RelativeLayout>
 
 </RelativeLayout>
