--- a/agree/res/layout/edit_image_text_item.xml
+++ b/agree/res/layout/edit_image_text_item.xml
@@ -6,10 +6,13 @@
     >
 
     <RelativeLayout
+        android:id="@+id/EditTextHeightLayout"
         android:layout_width="match_parent"
         android:layout_height="5.0dp"
         android:layout_below="@+id/EditImageTextLayout"
-        android:layout_centerHorizontal="true" >
+        android:layout_centerHorizontal="true"
+         >
+
     </RelativeLayout>
 
     <RelativeLayout
