--- a/agree/res/layout/fragment_photos_preview.xml
+++ b/agree/res/layout/fragment_photos_preview.xml
@@ -1,5 +1,6 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/RelativeLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PhotosPreviewFragment" >
@@ -7,7 +8,9 @@
     <ListView
         android:id="@+id/listpreview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" >
     </ListView>
 
-</FrameLayout>
+</RelativeLayout>
