--- a/agree/res/layout/activity_pay.xml
+++ b/agree/res/layout/activity_pay.xml
@@ -36,6 +36,7 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/relativeLayout2"
         android:layout_width="match_parent"
         android:layout_height="230.0dp"
         android:layout_above="@+id/relativeLayout1"
