--- a/agree/res/layout/graphicpreview_item.xml
+++ b/agree/res/layout/graphicpreview_item.xml
@@ -1,57 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" >
 
     <RelativeLayout
-        android:id="@+id/GraphicPreviewWhiteLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="30.0dp"
-        android:layout_alignLeft="@+id/GraphicPreviewImageView"
-        android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/GraphicPreviewImageView"
-        android:visibility="gone" >
-    </RelativeLayout>
-
-    <ImageView
-        android:id="@+id/GraphicPreviewImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/GraphicPreviewWhiteLayout1"
-        android:adjustViewBounds="true"
-        android:scaleType="fitXY"
-        android:src="@drawable/about_us" />
-
-    <RelativeLayout
-        android:id="@+id/GraphicPreviewWhiteLayout"
-        android:layout_width="match_parent"
-        android:layout_height="30.0dp"
-        android:layout_alignLeft="@+id/GraphicPreviewImageView"
-        android:layout_alignRight="@+id/GraphicPreviewImageView"
-        android:layout_below="@+id/GraphicPreviewImageView"
-        android:visibility="gone" >
-    </RelativeLayout>
-
-    <TextView
-        android:id="@+id/GraphicPreviewText"
+        android:id="@+id/GraphicPreviewTextLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/GraphicPreviewWhiteLayout"
-        android:layout_marginLeft="30.0dp"
-        android:layout_marginRight="20.0dp"
-        android:gravity="left|center"
-        android:text="ssda"
-        android:textColor="#535353"
-        android:textSize="13.0sp" />
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        >
+
+        <TextView
+            android:id="@+id/GraphicPreviewText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_margin="10.0dp"
+            android:gravity="left|center"
+            android:text="ssda"
+            android:textColor="#535353"
+            android:textSize="13.0sp" />
+    </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/GraphicPreviewWhiteLayout2"
+        android:id="@+id/GraphicPreviewImageViewLayout"
         android:layout_width="match_parent"
-        android:layout_height="30.0dp"
-        android:layout_alignLeft="@+id/GraphicPreviewText"
-        android:layout_alignRight="@+id/GraphicPreviewText"
-        android:layout_below="@+id/GraphicPreviewText"
-        android:visibility="gone" >
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10.0dp"
+        android:layout_marginTop="5.0dp"
+        android:layout_marginRight="10.0dp"
+        android:layout_marginBottom="5.0dp"
+        android:visibility="gone" 
+         >
+
+        <ImageView
+            android:id="@+id/GraphicPreviewImageView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="5.0dp"
+            android:layout_below="@+id/GraphicPreviewImageView"
+            android:layout_centerHorizontal="true" >
+        </RelativeLayout>
     </RelativeLayout>
+    <!--
+         android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+    -->
 
 </RelativeLayout>
