--- a/agree/res/layout/partyreaduserallfriends_item.xml
+++ b/agree/res/layout/partyreaduserallfriends_item.xml
@@ -28,19 +28,32 @@
 
         <RelativeLayout
             android:id="@+id/relativeLayout1"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="55.0dp"
+            android:layout_height="55.0dp"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="25dp" >
 
             <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:scaleType="fitXY"
+                android:src="@drawable/chatroomedge" />
+
+            <ImageView
                 android:id="@+id/PartyReadUserAllFriends_head"
-                android:layout_width="50.0dp"
-                android:layout_height="50.0dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:src="@drawable/login_1" />
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:layout_marginLeft="0.50dp"
+                android:layout_marginRight="0.50dp"
+                
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/chatroomhead" />
 
             <TextView
                 android:id="@+id/tv_menmberNum"
@@ -48,8 +61,9 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:text="Tsa" 
+                android:text="0"
                 android:textColor="#88d4cc"
+                android:textSize="15.0sp" 
                 android:visibility="gone"
                 />
 
@@ -59,8 +73,9 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@+id/relativeLayout1" >
+            android:layout_toRightOf="@+id/relativeLayout1" 
+            android:layout_marginLeft="10.0dp"
+            >
 
             <TextView
                 android:id="@+id/tv_lastmsg"
@@ -69,9 +84,8 @@
                 android:layout_alignLeft="@+id/PartyReadUserAllFriends_name"
                 android:layout_below="@+id/PartyReadUserAllFriends_name"
                 android:layout_marginTop="3dp"
-                android:text="TextView" 
-                android:textColor="#959595"
-                />
+                android:text="TextView"
+                android:textColor="#959595" />
 
             <TextView
                 android:id="@+id/PartyReadUserAllFriends_name"
@@ -83,7 +97,6 @@
                 android:singleLine="true"
                 android:text="15614"
                 android:textSize="17.0sp" />
-
         </RelativeLayout>
 
     </RelativeLayout>
