--- a/agree/res/layout/activity_more.xml
+++ b/agree/res/layout/activity_more.xml
@@ -6,223 +6,277 @@
     tools:context=".MoreActivity" >
 
     <RelativeLayout
-        android:id="@+id/More_title_cancel_layout"
+        android:id="@+id/MoreLayout"
         android:layout_width="match_parent"
-        android:layout_height="50.0dp"
-        android:layout_alignParentBottom="true"
+        android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10.0dp"
-        android:layout_marginRight="10.0dp"
-        android:background="#ffffff" >
+        android:layout_centerVertical="true" >
 
-        <!-- android:background="@drawable/more_corners" -->
-        <!-- 圆角 -->
-
-        <TextView
-            android:id="@+id/More_title_cancel"
+        <RelativeLayout
+            android:id="@+id/More_title_cancel_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="50.0dp"
+            android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:layout_margin="5.0dp"
-            android:background="#efefef"
-            android:gravity="center"
-            android:text="@string/more_title_cancel"
-            android:textColor="#000000"
-            android:textSize="16.0sp" />
-    </RelativeLayout>
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10.0dp"
+            android:layout_marginRight="10.0dp"
+            android:background="#ffffff" >
 
-    <LinearLayout
-        android:id="@+id/More_creator_layout"
-        android:layout_width="match_parent"
-        android:layout_height="185.0dp"
-        android:layout_above="@+id/More_title_cancel_layout"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10.0dp"
-        android:layout_marginRight="10.0dp"
-        android:background="#ffffff"
-        android:orientation="vertical"
-        android:visibility="gone" >
-
-        <!-- android:background="@drawable/more_corners" -->
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="45.0dp" >
+            <!-- android:background="@drawable/more_corners" -->
+            <!-- 圆角 -->
 
             <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="5.0dp"
-                android:text="@string/more_prompt"
-                android:textColor="#000000"
-                android:textSize="15.0sp" />
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:text="@string/more_prompt_1"
-                android:textSize="13.0sp" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/More_creator_cancel_layout"
-            android:layout_width="match_parent"
-            android:layout_height="45.0dp" >
-
-            <!-- android:textColor="#ff0000" -->
-
-            <TextView
-                android:id="@+id/More_creator_cancel"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginLeft="5.0dp"
-                android:layout_marginRight="5.0dp"
-                android:layout_marginTop="5.0dp"
-                android:background="#e3e3e3"
-                android:gravity="center"
-                android:text="@string/more_creator_cancel"
-                android:textColor="#535353"
-                android:textSize="15.0sp" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/More_creator_share_layout"
-            android:layout_width="match_parent"
-            android:layout_height="45.0dp" >
-
-            <!-- android:textColor="#0072e3" -->
-
-            <TextView
-                android:id="@+id/More_creator_share"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginLeft="5.0dp"
-                android:layout_marginRight="5.0dp"
-                android:layout_marginTop="5.0dp"
-                android:background="#e3e3e3"
-                android:gravity="center"
-                android:text="@string/more_member_share"
-                android:textColor="#535353"
-                android:textSize="15.0sp" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/More_creator_add_layout"
-            android:layout_width="match_parent"
-            android:layout_height="50.0dp" >
-
-            <TextView
-                android:id="@+id/More_member_add_1"
+                android:id="@+id/More_title_cancel"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:layout_margin="5.0dp"
-                android:background="#e3e3e3"
+                android:background="#efefef"
                 android:gravity="center"
-                android:text="@string/more_creator_add"
-                android:textColor="#535353"
-                android:textSize="15.0sp" />
-        </RelativeLayout>
-        <!-- android:textColor="#0072e3" -->
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/More_member_layout"
-        android:layout_width="match_parent"
-        android:layout_height="140.0dp"
-        android:layout_above="@+id/More_title_cancel_layout"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10.0dp"
-        android:layout_marginRight="10.0dp"
-        android:background="#ffffff"
-        android:orientation="vertical" >
-
-        <!-- android:background="@drawable/more_corners" -->
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="45.0dp" >
-
-            <TextView
-                android:id="@+id/textView11"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:text="@string/more_prompt_1"
-                android:textColor="#535353"
-                android:textSize="13.0sp" />
-
-            <TextView
-                android:id="@+id/textView10"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="5.0dp"
-                android:text="@string/more_prompt"
+                android:text="@string/more_title_cancel"
                 android:textColor="#000000"
                 android:textSize="16.0sp" />
         </RelativeLayout>
 
-        <RelativeLayout
-            android:id="@+id/More_member_share_layout"
+        <LinearLayout
+            android:id="@+id/More_creator_layout"
             android:layout_width="match_parent"
-            android:layout_height="45.0dp" >
+            android:layout_height="230.0dp"
+            android:layout_above="@+id/More_title_cancel_layout"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10.0dp"
+            android:layout_marginRight="10.0dp"
+            android:background="#ffffff"
+            android:orientation="vertical"
+            android:visibility="gone"
+             >
 
-            <TextView
-                android:id="@+id/More_member_share"
+            <!-- android:background="@drawable/more_corners" -->
+
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginLeft="5.0dp"
-                android:layout_marginRight="5.0dp"
-                android:layout_marginTop="5.0dp"
-                android:background="#efefef"
-                android:gravity="center"
-                android:text="@string/more_member_share"
-                android:textColor="#535353"
-                android:textSize="15.0sp" />
+                android:layout_height="45.0dp" >
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="5.0dp"
+                    android:text="@string/more_prompt"
+                    android:textColor="#000000"
+                    android:textSize="15.0sp" />
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:text="@string/more_prompt_1"
+                    android:textSize="13.0sp" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/More_creator_cancel_layout"
+                android:layout_width="match_parent"
+                android:layout_height="45.0dp" >
+
+                <!-- android:textColor="#ff0000" -->
+
+                <TextView
+                    android:id="@+id/More_creator_cancel"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginLeft="5.0dp"
+                    android:layout_marginRight="5.0dp"
+                    android:layout_marginTop="5.0dp"
+                    android:background="#e3e3e3"
+                    android:gravity="center"
+                    android:text="@string/more_creator_cancel"
+                    android:textColor="#535353"
+                    android:textSize="15.0sp" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/More_creator_share_layout"
+                android:layout_width="match_parent"
+                android:layout_height="45.0dp" >
+
+                <!-- android:textColor="#0072e3" -->
+
+                <TextView
+                    android:id="@+id/More_creator_shareCircle"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginLeft="5.0dp"
+                    android:layout_marginRight="5.0dp"
+                    android:layout_marginTop="5.0dp"
+                    android:background="#e3e3e3"
+                    android:gravity="center"
+                    android:text="@string/more_member_share_1"
+                    android:textColor="#535353"
+                    android:textSize="15.0sp" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="45.0dp" >
+
+                <TextView
+                    android:id="@+id/More_creator_sharefriends"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginLeft="5.0dp"
+                    android:layout_marginRight="5.0dp"
+                    android:layout_marginTop="5.0dp"
+                    android:background="#e3e3e3"
+                    android:gravity="center"
+                    android:text="@string/more_member_share_2"
+                    android:textColor="#535353"
+                    android:textSize="15.0sp" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/More_creator_add_layout"
+                android:layout_width="match_parent"
+                android:layout_height="50.0dp" >
+
+                <TextView
+                    android:id="@+id/More_member_add_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:layout_margin="5.0dp"
+                    android:background="#e3e3e3"
+                    android:gravity="center"
+                    android:text="@string/more_creator_add"
+                    android:textColor="#535353"
+                    android:textSize="15.0sp" />
+            </RelativeLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/More_member_layout"
+            android:layout_width="match_parent"
+            android:layout_height="185.0dp"
+            android:layout_above="@+id/More_title_cancel_layout"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10.0dp"
+            android:layout_marginRight="10.0dp"
+            android:background="#ffffff"
+            android:orientation="vertical"
+             >
+
+            <!-- android:background="@drawable/more_corners" -->
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="45.0dp" >
+
+                <TextView
+                    android:id="@+id/textView11"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:text="@string/more_prompt_1"
+                    android:textColor="#535353"
+                    android:textSize="13.0sp" />
+
+                <TextView
+                    android:id="@+id/textView10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="5.0dp"
+                    android:text="@string/more_prompt"
+                    android:textColor="#000000"
+                    android:textSize="16.0sp" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/More_member_sharecircle_layout"
+                android:layout_width="match_parent"
+                android:layout_height="45.0dp" >
+
+                <TextView
+                    android:id="@+id/More_member_sharecircle"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginLeft="5.0dp"
+                    android:layout_marginRight="5.0dp"
+                    android:layout_marginTop="5.0dp"
+                    android:background="#efefef"
+                    android:gravity="center"
+                    android:text="@string/more_member_share_1"
+                    android:textColor="#535353"
+                    android:textSize="15.0sp" />
+            </RelativeLayout>
 
             <!-- android:textColor="#0072e3" -->
 
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/More_member_add_layout"
-            android:layout_width="match_parent"
-            android:layout_height="50.0dp" >
-
-            <TextView
-                android:id="@+id/More_member_add"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:layout_margin="5.0dp"
-                android:background="#efefef"
-                android:gravity="center"
-                android:text="@string/more_creator_add"
-                android:textColor="#535353"
-                android:textSize="15.0sp" />
-        </RelativeLayout>
-        <!-- android:textColor="#0072e3" -->
-    </LinearLayout>
+                android:layout_height="wrap_content" >
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="45.0dp" >
+
+                <TextView
+                    android:id="@+id/More_member_sharefriends"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginLeft="5.0dp"
+                    android:layout_marginRight="5.0dp"
+                    android:layout_marginTop="5.0dp"
+                    android:background="#efefef"
+                    android:gravity="center"
+                    android:text="@string/more_member_share_2"
+                    android:textColor="#535353"
+                    android:textSize="15.0sp" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/More_member_add_layout"
+                android:layout_width="match_parent"
+                android:layout_height="50.0dp"
+                android:layout_alignBottom="@+id/More_member_layout"
+                android:layout_alignLeft="@+id/More_member_layout"
+                android:layout_alignRight="@+id/More_member_layout" >
+
+                <TextView
+                    android:id="@+id/More_member_add"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_centerVertical="true"
+                    android:layout_margin="5.0dp"
+                    android:background="#efefef"
+                    android:gravity="center"
+                    android:text="@string/more_creator_add"
+                    android:textColor="#535353"
+                    android:textSize="15.0sp" />
+            </RelativeLayout>
+        </LinearLayout>
+    </RelativeLayout>
 
 </RelativeLayout>
