--- a/agree/res/layout/activity_add_friends3.xml
+++ b/agree/res/layout/activity_add_friends3.xml
@@ -2,7 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddChatsActivity" >
+    tools:context=".AddChatsActivity"
+    android:background="#efefef"
+     >
 
     <RelativeLayout
         android:id="@+id/relativeLayout1"
@@ -62,9 +64,8 @@
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="30.0dp"
-            android:layout_toLeftOf="@+id/AddFriends3OKLayout"
             android:text="好友"
             android:textColor="@drawable/title_text_color"
             android:textSize="@dimen/title_size" />
@@ -76,7 +77,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/relativeLayout1" >
+        android:layout_below="@+id/relativeLayout1"
+        android:background="#ffffff"
+         >
     </ListView>
 
 </RelativeLayout>
