--- a/agree/res/layout/activity_add_team_friends.xml
+++ b/agree/res/layout/activity_add_team_friends.xml
@@ -2,14 +2,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddTeamFriendsActivity" >
+    tools:context=".AddTeamFriendsActivity"
+    android:background="#efefef"
+     >
 
     <RelativeLayout
         android:id="@+id/AddTeamFriendsTitleLayout"
         android:layout_width="match_parent"
         android:layout_height="50.0dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" >
+        android:layout_centerHorizontal="true"
+        android:background="#ffffff"
+         >
 
         <TextView
             android:id="@+id/AddTeamFriendsBack"
@@ -17,19 +21,17 @@
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:text="返回"
-            android:textSize="13.0sp"
-            android:textColor="@drawable/title_left_color"
             android:gravity="center"
-             />
+            android:text="返回"
+            android:textColor="@drawable/title_left_color"
+            android:textSize="13.0sp" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="0.50dp"
             android:layout_alignParentBottom="true"
-            android:background="#aaaaaa"
-             />
+            android:background="#aaaaaa" />
 
         <TextView
             android:id="@+id/AddTeamFriendsOK"
@@ -38,30 +40,18 @@
             android:layout_alignBaseline="@+id/AddTeamFriendsBack"
             android:layout_alignBottom="@+id/AddTeamFriendsBack"
             android:layout_alignParentRight="true"
-            android:text="完成"
-            android:textSize="13.0sp" 
-            android:textColor="@drawable/title_right_color"
             android:gravity="center"
-            />
-
+            android:text="完成"
+            android:textColor="@drawable/title_right_color"
+            android:textSize="13.0sp" />
     </RelativeLayout>
 
-    <RelativeLayout
+    <ListView
+        android:id="@+id/AddTeamFriendsListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/AddTeamFriendsTitleLayout"
-        
-        >
-
-        <ListView
-            android:id="@+id/AddTeamFriendsListView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:background="#ffffff"
-             >
-        </ListView>
-
-    </RelativeLayout>
+        android:background="#ffffff" >
+    </ListView>
 
 </RelativeLayout>
