--- a/agree/res/layout/activity_add_new_party.xml
+++ b/agree/res/layout/activity_add_new_party.xml
@@ -29,23 +29,6 @@
                 android:textSize="@dimen/title_left_size" />
         </RelativeLayout>
 
-        <RelativeLayout
-            android:id="@+id/Add_New_Party_OK_layout"
-            android:layout_width="65.0dp"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true" >
-
-            <TextView
-                android:id="@+id/Add_New_Party_OK"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:text="@string/newparty_title_right"
-                android:textColor="@drawable/title_right_color"
-                android:textSize="@dimen/title_right_size" />
-        </RelativeLayout>
 
         <TextView
             android:id="@+id/textView3"
@@ -64,6 +47,21 @@
             android:text="@string/newparty_title_text"
             android:textColor="#535353"
             android:textSize="15.0sp" />
+
+        <Button
+            android:id="@+id/Add_New_Party_OK"
+            android:layout_width="65.0dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:background="@null"
+            android:gravity="center"
+            android:text="@string/newparty_title_right"
+            android:textColor="@drawable/title_right_color"
+            android:textSize="@dimen/title_right_size" 
+            android:enabled="true"
+            />
+
     </RelativeLayout>
 
     <RelativeLayout
