--- a/agree/res/layout/activity_newteam.xml
+++ b/agree/res/layout/activity_newteam.xml
@@ -31,25 +31,6 @@
                 android:textSize="@dimen/title_left_size" />
         </RelativeLayout>
 
-        <RelativeLayout
-            android:id="@+id/NewTeam_OK_layout"
-            android:layout_width="@dimen/title_right_width"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true" >
-
-            <TextView
-                android:id="@+id/NewTeam_OK"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:gravity="center"
-                android:text="@string/NewTeam_title_right"
-                android:textColor="@drawable/title_right_color"
-                android:textSize="@dimen/title_right_size" />
-        </RelativeLayout>
-
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
@@ -57,6 +38,19 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:background="#aaaaaa" />
+
+        <Button
+            android:id="@+id/NewTeam_OK"
+            android:layout_width="65.0dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:background="@null"
+            android:enabled="true"
+            android:gravity="center"
+            android:text="@string/NewTeam_title_right"
+            android:textColor="@drawable/title_right_color"
+            android:textSize="@dimen/title_right_size" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -99,8 +93,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="44.0dp"
                 android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                 >
+                android:layout_centerHorizontal="true" >
 
                 <TextView
                     android:id="@+id/textView1"
@@ -123,13 +116,12 @@
                     android:layout_height="match_parent"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
+                    android:layout_margin="5.0dp"
                     android:background="@null"
                     android:ems="10"
                     android:gravity="center"
                     android:hint="@string/NewTeam_hint"
-                    android:layout_margin="5.0dp"
-                    android:textSize="13.0sp"
-                     >
+                    android:textSize="13.0sp" >
 
                     <requestFocus />
                 </EditText>
