--- a/agree/res/layout/fragment_home.xml
+++ b/agree/res/layout/fragment_home.xml
@@ -33,9 +33,8 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:text="@string/home_title_text"
-            android:textSize="@dimen/title_size" 
             android:textColor="@drawable/title_text_color"
-            />
+            android:textSize="@dimen/title_size" />
 
         <RelativeLayout
             android:id="@+id/tab_home_new_layout"
@@ -70,33 +69,101 @@
             android:cacheColorHint="#00000000"
             android:listSelector="#00000000"
             android:numColumns="2"
-            android:stretchMode="columnWidth"
-            >
+            android:stretchMode="columnWidth" >
         </GridView>
     </android.support.v4.widget.SwipeRefreshLayout>
-    <!--
-        android:columnWidth="90dp" 
-		android:stretchMode="columnWidth"
-		android:transcriptMode="alwaysScroll"
-		 android:scrollbars="none"
-    -->
 
-    <RelativeLayout
-        android:id="@+id/Home_NoTeam_prompt_layout"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/Home_title_layout"
-        android:layout_centerHorizontal="true"
         android:visibility="gone" >
 
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="185dp"
-            android:src="@drawable/chat_default_user_avatar" />
-    </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/Home_NoTeam_prompt_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/Home_title_layout"
+            android:layout_centerHorizontal="true" >
+
+            <RelativeLayout
+                android:id="@+id/HomeRequestCodeLayout"
+                android:layout_width="match_parent"
+                android:layout_height="100.0dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true" >
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:text="收到了邀请码?"
+                    android:textColor="#535353"
+                    android:textSize="13.0sp" />
+            </RelativeLayout>
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="50.0dp"
+                android:layout_height="60.0dp"
+                android:layout_below="@+id/HomeRequestCodeLayout"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="60dp"
+                android:src="@drawable/flag" />
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/imageView1"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10.0dp" >
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:text="你还没有加入任何一个的社团"
+                    android:textColor="#b9b9b9"
+                    android:textSize="13.0sp" />
+
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/textView4"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="2.0dp"
+                    android:text="或"
+                    android:textColor="#b9b9b9"
+                    android:textSize="13.0sp" />
+
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/textView5"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="2.0dp"
+                    android:text="自己带领小伙伴来新建一个吧!"
+                    android:textColor="#b9b9b9"
+                    android:textSize="13.0sp" />
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/textView3"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="2.0dp"
+                    android:text="输入邀请码  加入一个"
+                    android:textColor="#b9b9b9"
+                    android:textSize="13.0sp" />
+            </RelativeLayout>
+        </RelativeLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
