--- a/agree/res/layout/fragment_party.xml
+++ b/agree/res/layout/fragment_party.xml
@@ -52,31 +52,6 @@
             android:background="#aaaaaa" />
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/tab_party_prompt_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/tab_party_title_layout"
-        android:layout_centerHorizontal="true"
-        android:visibility="gone" >
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="45dp"
-            android:text="@string/party_prompt"
-            android:textColor="#00e3e3" />
-
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="match_parent"
-            android:layout_height="0.50dp"
-            android:background="#aaaaaa" />
-    </RelativeLayout>
-
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/tab_party_swipe_refresh"
         android:layout_width="match_parent"
@@ -92,5 +67,34 @@
             android:layout_centerHorizontal="true" >
         </ListView>
     </android.support.v4.widget.SwipeRefreshLayout>
+
+    <RelativeLayout
+        android:id="@+id/tab_party_prompt_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tab_party_title_layout"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone" >
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="50.0dp"
+            android:layout_height="50.0dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="150.0dp"
+            android:src="@drawable/calender" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/imageView1"
+            android:layout_below="@+id/imageView1"
+            android:layout_marginTop="36dp"
+            android:text="暂无日程"
+            android:textColor="#b9b9b9"
+            android:textSize="13.0sp" />
+    </RelativeLayout>
 
 </RelativeLayout>
