--- a/agree/res/layout/fragment_photos_preview.xml
+++ b/agree/res/layout/fragment_photos_preview.xml
@@ -5,12 +5,59 @@
     android:layout_height="match_parent"
     tools:context=".PhotosPreviewFragment" >
 
+    
     <ListView
         android:id="@+id/listpreview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" >
+        android:layout_alignParentTop="true"
+         >
     </ListView>
+   
+
+    <RelativeLayout
+        android:id="@+id/PhotosPreviewPromptLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:background="#efefef"
+        android:visibility="gone"
+         >
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imageView1"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="40.0dp"
+            android:gravity="center"
+            android:text="这里还没有图片信息  点击创建"
+            android:textColor="#b9b9b9"
+            android:textSize="14.0sp" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView1"
+            android:layout_centerHorizontal="true"
+            android:gravity="center"
+            android:text="一个活动来当相册吧"
+            android:textColor="#b9b9b9"
+            android:textSize="14.0sp" />
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="50.0dp"
+            android:layout_height="50.0dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="180.0dp"
+            android:src="@drawable/calender" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
