--- a/agree/res/layout/fragment_tabs.xml
+++ b/agree/res/layout/fragment_tabs.xml
@@ -28,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0"
-            android:background="#ffffff"
+            android:background="#fafafa"
             android:divider="@null"
             android:orientation="horizontal" >
         </TabWidget>
